# AbyssEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MacOSXBundleInfo.plist.in  README.md  memcheck.sh  meson.build  valgrind.supp  vcpkg.json
.github/workflows/: build.yml  ci.yml  cmake-multi-platform.yml  code-ql.yml  codeql.yml
cmake/: AutoClangFormat.cmake  BuildOptions.cmake  Dependencies.cmake  FindFFMPEG.cmake  Package.cmake  SetupSourceGroups.cmake  macros.cmake
content/: abyss.ini
extra/: memcheck.sh
extra/macos/: MacOSXBundleInfo.plist.in
src/: Abyss.c  AbyssEngine.c  CMakeLists.txt  abyss.c  config.c  config.h  crypto.c  crypto.h  cursor.c  cursor.h  dc6.c  dc6.h  fileman.c  fileman.h  font.h  globals.c  globals.h  implode.c  implode.h  log.c  log.h  meson.build  mpq.c  mpq.h  mpq_block.c  mpq_block.h  mpq_hash.c  mpq_hash.h  mpq_header.c  mpq_header.h  mpq_stream.c  mpq_stream.h  palette.c  palette.h  resource_paths.h  scene.c  scene.h  scene_mainmenu.c  scene_mainmenu.h  sprite.c  (+1 more)
src/audio/: AudioManager.c  AudioManager.h  AudioStream.c  AudioStream.h  CMakeLists.txt  audio_stream.c  audio_stream.h  audioman.c  audioman.h
src/common/: AbyssConfiguration.c  AbyssConfiguration.h  CMakeLists.txt  FileManager.c  FileManager.h  Globals.c  Globals.h  Logging.c  Logging.h  MemoryStream.c  MemoryStream.h  MpqStream.c  MpqStream.h  ResourcePaths.h  RingBuffer.c  RingBuffer.h  config.c  config.h  fileman.c  fileman.h  globals.c  globals.h  log.c  log.h  mpq_stream.c  mpq_stream.h  resource_paths.h  ring_buffer.c  ring_buffer.h
src/drawing/: Button.c  Button.h  CMakeLists.txt  Cursor.c  Cursor.h  Label.c  Label.h  Sprite.c  Sprite.h  cursor.c  cursor.h  label.c  label.h  sprite.c  sprite.h
src/managers/: AudioManager.c  AudioManager.h  CMakeLists.txt  InputManager.c  InputManager.h  VideoManager.c  VideoManager.h
src/scenes/: CMakeLists.txt  Scene.c  Scene.h  SceneIntroVideos.c  SceneIntroVideos.h  SceneMainMenu.c  SceneMainMenu.h  scene.c  scene.h  scene_mainmenu.c  scene_mainmenu.h
src/types/: CMakeLists.txt  DC6.c  DC6.h  DC6Frame.c  DC6Frame.h  Font.c  Font.h  MPQ.c  MPQ.h  MPQBlock.c  MPQBlock.h  MPQHash.c  MPQHash.h  MPQHeader.c  MPQHeader.h  Palette.c  Palette.h  dc6.c  dc6.h  font.c  font.h  mpq.c  mpq.h  mpq_block.c  mpq_block.h  mpq_hash.c  mpq_hash.h  mpq_header.c  mpq_header.h  palette.c  palette.h
src/util/: BitReader.c  BitReader.h  CMakeLists.txt  Crypto.c  Crypto.h  Huffman.c  Huffman.h  Implode.c  Implode.h  Mutex.c  Mutex.h  WavDecompress.c  WavDecompress.h  bit_reader.c  bit_reader.h  crypto.c  crypto.h  huffman.c  huffman.h  implode.c  implode.h  wav_decompress.c  wav_decompress.h
tests/: CMakeLists.txt  RingBufferTest.c
